--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.message-wrap {
+  position: fixed;
+  top: 2em;
+  right: 2em;
+  z-index: 9;
+
+}
+
+.message {
+  min-width: 10em;
+  margin-bottom: .5em;
+  padding: .5em;
+  opacity: 0;
+  background: #fff;
+  box-shadow: 0px 2px 5px #aaa;
+  transition: all .3s ease-in-out;
+
+  &.show {
+    opacity: 1;
+  }
+}
